Update styling of page, and fixed issue with e2e test.

--- a/src/app/content/dashboard.component.css
+++ b/src/app/content/dashboard.component.css
@@ -46,6 +46,16 @@ h4 {
 .grid-pad > [class*='col-']:last-of-type {
   padding-right: 20px;
 }
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
+.clear {
+  clear: none;
+}
+
 @media (max-width: 600px) {
   .module {
     font-size: 10px;
