--- a/src/app/content/app.component.css
+++ b/src/app/content/app.component.css
@@ -1,7 +1,8 @@
 h1 {
-  font-size: 1.2em;
+  font-size: 3em;
   color: #999;
   margin-bottom: 0;
+  margin-left: -10%;
 }
 h2 {
   font-size: 2em;
@@ -25,4 +26,9 @@ nav a:hover {
 }
 nav a.active {
   color: #039be5;
+}
+.center {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
 }
