--- a/src/app/templates/dashboard.component.html
+++ b/src/app/templates/dashboard.component.html
@@ -1,9 +1,13 @@
-<h3>Top Movies</h3>
-<div class="grid grid-pad">
-  <a *ngFor="let movie of movies" [routerLink]="['/detail', movie.id]" class="col-1-4">
-    <div class="module movie">
-      <h4>{{ movie.title }} ({{ movie.year }})</h4>
-    </div>
-  </a>
+<div class="left">
+  <h3>Top Movies</h3>
+  <div class="grid grid-pad">
+    <a *ngFor="let movie of movies" [routerLink]="['/detail', movie.id]" class="col-1-4">
+      <div class="module movie">
+        <h4 class="topMovie">{{ movie.title }} ({{ movie.year }})</h4>
+      </div>
+    </a>
+  </div>
 </div>
-<movie-search></movie-search>
+<div class="right">
+  <movie-search></movie-search>
+</div>
