--- a/src/app/templates/movie-search.component.html
+++ b/src/app/templates/movie-search.component.html
@@ -1,20 +1,20 @@
 <div id="search-component">
-  <h4>Search for a Movie</h4>
+  <h4 class="searchTitle">Search for a Movie</h4>
   <fieldset class="search">
     <legend>Search:</legend>
     <h5>Movie Properties</h5>
     <div id="movieSearchProperties">
       <span>
         <label for="title">Title:</label> 
-        <input #searchTitle id="title" type="text" (keyup)="searchTitle(searchTitle.value)">
+        <input #searchTitle id="title" type="text" (keyup)="search('title', searchTitle.value)">
       </span>
       <span>
         <label for="genre">Genre:</label>
-        <input #searchGenre id="genre" type="text" (keyup)="searchGenre(searchGenre.value)">
+        <input #searchGenre id="genre" type="text" (keyup)="search('genre', searchGenre.value)">
       </span>
       <span>
         <label for="year">Year:</label>
-        <input #searchYear id="year" type="text" (keyup)="searchYear(searchYear.value)">
+        <input #searchYear id="year" type="text" (keyup)="search('year', searchYear.value)">
       </span>
     </div>
     <h5>Actor Properties</h5>
@@ -29,9 +29,10 @@
       </span>
     </div>
   </fieldset>
+  <br/>
   <div>
     <div *ngFor="let movie of movies | async" (click)="gotoDetail(movie)" class="search-result">
-      {{movie.name}}
+      <span class="title">{{movie.title}}</span>
     </div>
   </div>
 </div>
